# mindmap_python

./: README.md  pyproject.toml
exercicios/: pyproject.toml
exercicios/exercicios/fundamentos/: pyproject.toml
exercicios/exercicios/fundamentos/calculo_kpi/: README.md  calculo_kpi.py  main.py
exercicios/exercicios/fundamentos/conversor_temperatura/: conversor.py  main.py  pyproject.toml
exercicios/exercicios/fundamentos/fundamentos/: calculo_kpi.py
exercicios/exercicios/fundamentos/lista_de_compras/: README.md  pyproject.toml  utils.py
projetos/: pyproject.toml
recursos/: pyproject.toml
